Hand and Card Class updated with the images and side-by-side txt files